--- a/.github/workflows/angular-build.yml
+++ b/.github/workflows/angular-build.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 16
+    - name: Use Node.js 18
       uses: actions/setup-node@v1
       with:
         node-version: 18
-    - run: npm ci
+    - run: npm i
     - run: npm run build
     - name: Create the release.zip file
       run: zip -r ../release.zip .
