--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "rxjs": "~6.6.2",
     "sa-overview-svelte": "file:../sa-overview-svelte",
     "tslib": "1.10.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular/cli": "^10.0.6",
