--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "proxyConfig": "proxy.conf.json",
             "browserTarget": "sa-admin-ts:build"
           },
           "configurations": {
